--- a/index.html
+++ b/index.html
@@ -2,36 +2,32 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8" />
   <title>TinDog</title>
 
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous" />
 
   <!-- JavaScript Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
     crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/styles.css" />
 
   <!-- font awesome -->
   <script src="https://kit.fontawesome.com/10082f57b9.js" crossorigin="anonymous"></script>
 
   <!-- google fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;800&family=Ubuntu:wght@300&display=swap"
-    rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&family=Ubuntu:wght@300&display=swap"
+    rel="stylesheet" />
 </head>
 
 <body>
-
-
   <section id="title">
-
     <div class="container-fluid">
-
       <!-- Nav Bar -->
 
       <nav class="navbar navbar-dark navbar-expand-sm">
@@ -51,130 +47,160 @@
             <li class="nav-item">
               <a href="#" class="nav-link">Login</a>
             </li>
-
           </ul>
         </div>
       </nav>
-
-
 
       <!-- Title -->
 
       <div class="row">
         <div class="col-lg-6">
-
           <h1 class="heading">Meet new and interesting dogs nearby.</h1>
-          <button type="button" class="btn btn-dark btn-lg"><i class="fa-brands fa-apple"></i> Download</button>
-          <button type="button" class="btn btn-outline-light btn-lg"><i class="fa-brands fa-google-play"></i>
-            Download</button>
+          <button type="button" class="btn btn-dark btn-lg download-button">
+            <i class="fa-brands fa-apple"></i> Download
+          </button>
+          <button type="button" class="btn btn-outline-light btn-lg download-button">
+            <i class="fa-brands fa-google-play"></i> Download
+          </button>
         </div>
         <div class="col-lg-6">
-          <img src="images/iphone6.png" alt="iphone-mockup">
+          <img class="title-image" style="position: relative; left: 80px" src="images/iphone6.png"
+            alt="iphone-mockup" />
         </div>
       </div>
-
-
     </div>
   </section>
 
-
   <!-- Features -->
 
-  <section id="features">
-
-    <h3>Easy to use.</h3>
-    <p>So easy to use, even your dog could do it.</p>
-
-    <h3>Elite Clientele</h3>
-    <p>We have all the dogs, the greatest dogs.</p>
-
-    <h3>Guaranteed to work.</h3>
-    <p>Find the love of your dog's life or your money back.</p>
-
+  <section id="features" class="row">
+    <div class="col-md-4 feature">
+      <i class="fa-solid fa-circle-check feature-icon fa-4x"></i>
+      <h3>Easy to use.</h3>
+      <p>So easy to use, even your dog could do it.</p>
+    </div>
+    <div class="col-md-4 feature">
+      <i class="fa-solid fa-bullseye feature-icon fa-4x"></i>
+      <h3>Elite Clientele</h3>
+      <p>We have all the dogs, the greatest dogs.</p>
+    </div>
+    <div class="col-md-4 feature">
+      <i class="fa-solid fa-heart feature-icon fa-4x"></i>
+      <h3>Guaranteed to work</h3>
+      <p>Find the love of your dog's life or your money back.</p>
+    </div>
   </section>
-
 
   <!-- Testimonials -->
 
   <section id="testimonials">
-
-    <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-    <img src="images/dog-img.jpg" alt="dog-profile">
-    <em>Pebbles, New York</em>
-
-    <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-    <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-    <em>Beverly, Illinois</em> -->
-
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" data-bs-interval="6000">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <h2>
+            I no longer have to sniff other dogs for love. I've found the
+            hottest Corgi on TinDog. Woof.
+          </h2>
+          <img class="testimonial-img" src="images/dog-img.jpg" alt="dog-profile" />
+          <em>Pebbles, New York</em>
+        </div>
+        <div class="carousel-item">
+          <h2 class="testimonial-text">
+            My dog used to be so lonely, but with TinDog's help, they've found
+            the love of their life. I think.
+          </h2>
+          <img class="testimonial-img" src="images/lady-img.jpg" alt="lady-profile" />
+          <em>Beverly, Illinois</em>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
   </section>
-
 
   <!-- Press -->
 
   <section id="press">
-    <img src="images/techcrunch.png" alt="tc-logo">
-    <img src="images/tnw.png" alt="tnw-logo">
-    <img src="images/bizinsider.png" alt="biz-insider-logo">
-    <img src="images/mashable.png" alt="mashable-logo">
-
+    <img class="press-img" src="images/techcrunch.png" alt="tc-logo" />
+    <img class="press-img" src="images/tnw.png" alt="tnw-logo" />
+    <img class="press-img" src="images/bizinsider.png" alt="biz-insider-logo" />
+    <img class="press-img" src="images/mashable.png" alt="mashable-logo" />
   </section>
-
 
   <!-- Pricing -->
 
   <section id="pricing">
-
     <h2>A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
+    <div class="row">
+      <div class="pricing-column col-lg-4 col-md-6">
+        <div class="card">
+          <div class="card-header">
+            <h3>Chihuahua</h3>
+          </div>
+          <div class="card-body d-grid gap-2">
+            <h2>Free</h2>
+            <p>5 Matches Per Day</p>
+            <p>10 Messages Per Day</p>
+            <p>Unlimited App Usage</p>
+            <button class="btn btn-outline-dark btn-block btn-lg " type="button">Sign Up</button>
+          </div>
+        </div>
+      </div>
+      <div class="pricing-column col-lg-4 col-md-6">
+        <div class="card">
+          <div class="card-header">
+            <h3>Labrador</h3>
+          </div>
+          <div class="card-body d-grid gap-2">
+            <h2>$49 / mo</h2>
+            <p>Unlimited Matches</p>
+            <p>Unlimited Messages</p>
+            <p>Unlimited App Usage</p>
+            <button class="btn btn-dark btn-lg btn-block" type="button">Sign Up</button>
+          </div>
+        </div>
+      </div>
 
-
-    <h3>Chihuahua</h3>
-    <h2>Free</h2>
-    <p>5 Matches Per Day</p>
-    <p>10 Messages Per Day</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
-
-    <h3>Labrador</h3>
-    <h2>$49 / mo</h2>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
-
-    <h3>Mastiff</h3>
-    <h2>$99 / mo</h2>
-    <p>Pirority Listing</p>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
+      <div class="pricing-column col-lg-4">
+        <div class="card ">
+          <div class="card-header">
+            <h3>Mastiff</h3>
+          </div>
+          <div class="card-body d-grid gap-2">
+            <h2>$99 / mo</h2>
+            <p>Pirority Listing</p>
+            <p>Unlimited Matches</p>
+            <p>Unlimited Messages</p>
+            <p>Unlimited App Usage</p>
+            <button class="btn btn-dark btn-lg btn-block" type="button">Sign Up</button>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
-
 
   <!-- Call to Action -->
 
   <section id="cta">
-
     <h3>Find the True Love of Your Dog's Life Today.</h3>
     <button type="button">Download</button>
     <button type="button">Download</button>
-
   </section>
-
 
   <!-- Footer -->
 
   <footer id="footer">
-
     <p>© Copyright TinDog</p>
-
   </footer>
-
-
 </body>
 
 </html>
