added pricing,cta and footer

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
       <!-- Title -->
 
-      <div class="row">
+      <div class="row title">
         <div class="col-lg-6">
           <h1 class="heading">Meet new and interesting dogs nearby.</h1>
           <button type="button" class="btn btn-dark btn-lg download-button">
@@ -63,8 +63,8 @@
             <i class="fa-brands fa-google-play"></i> Download
           </button>
         </div>
-        <div class="col-lg-6">
-          <img class="title-image" style="position: relative; left: 80px" src="images/iphone6.png"
+        <div class="col-lg-6" style="position: relative;">
+          <img class="title-image" src="images/iphone6.png"
             alt="iphone-mockup" />
         </div>
       </div>
@@ -192,13 +192,21 @@
 
   <section id="cta">
     <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <button type="button" class="btn btn-dark btn-lg download-button">
+      <i class="fa-brands fa-apple"></i> Download
+    </button>
+    <button type="button" class="btn btn-outline-light btn-lg download-button">
+      <i class="fa-brands fa-google-play"></i> Download
+    </button>
   </section>
 
   <!-- Footer -->
 
   <footer id="footer">
+    <i class="fa-brands fa-twitter icon-link"></i>
+    <i class="fa-brands fa-facebook icon-link"></i>
+    <i class="fa-brands fa-instagram icon-link"></i>
+    <i class="fa-solid fa-envelope icon-link"></i>
     <p>© Copyright TinDog</p>
   </footer>
 </body>
