--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-  <section id="title">
+  <section id="title" class="colored-section">
     <div class="container-fluid">
       <!-- Nav Bar -->
 
@@ -55,7 +55,7 @@
 
       <div class="row title">
         <div class="col-lg-6">
-          <h1 class="heading">Meet new and interesting dogs nearby.</h1>
+          <h1 class="big-heading">Meet new and interesting dogs nearby.</h1>
           <button type="button" class="btn btn-dark btn-lg download-button">
             <i class="fa-brands fa-apple"></i> Download
           </button>
@@ -73,31 +73,31 @@
 
   <!-- Features -->
 
-  <section id="features" class="row">
+  <section id="features" class="row white-section">
     <div class="col-md-4 feature">
       <i class="fa-solid fa-circle-check feature-icon fa-4x"></i>
-      <h3>Easy to use.</h3>
+      <h3 class="feature-title">Easy to use.</h3>
       <p>So easy to use, even your dog could do it.</p>
     </div>
     <div class="col-md-4 feature">
       <i class="fa-solid fa-bullseye feature-icon fa-4x"></i>
-      <h3>Elite Clientele</h3>
+      <h3 class="feature-title">Elite Clientele</h3>
       <p>We have all the dogs, the greatest dogs.</p>
     </div>
     <div class="col-md-4 feature">
       <i class="fa-solid fa-heart feature-icon fa-4x"></i>
-      <h3>Guaranteed to work</h3>
+      <h3 class="feature-title">Guaranteed to work</h3>
       <p>Find the love of your dog's life or your money back.</p>
     </div>
   </section>
 
   <!-- Testimonials -->
 
-  <section id="testimonials">
+  <section id="testimonials" class="colored-section">
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" data-bs-interval="6000">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <h2>
+          <h2 class="testimonial-text">
             I no longer have to sniff other dogs for love. I've found the
             hottest Corgi on TinDog. Woof.
           </h2>
@@ -137,7 +137,7 @@
 
   <!-- Pricing -->
 
-  <section id="pricing">
+  <section id="pricing" class="white-section">
     <h2>A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
     <div class="row">
@@ -147,7 +147,7 @@
             <h3>Chihuahua</h3>
           </div>
           <div class="card-body d-grid gap-2">
-            <h2>Free</h2>
+            <h2 class="pricing-text">Free</h2>
             <p>5 Matches Per Day</p>
             <p>10 Messages Per Day</p>
             <p>Unlimited App Usage</p>
@@ -161,7 +161,7 @@
             <h3>Labrador</h3>
           </div>
           <div class="card-body d-grid gap-2">
-            <h2>$49 / mo</h2>
+            <h2 class="pricing-text">$49 / mo</h2>
             <p>Unlimited Matches</p>
             <p>Unlimited Messages</p>
             <p>Unlimited App Usage</p>
@@ -176,7 +176,7 @@
             <h3>Mastiff</h3>
           </div>
           <div class="card-body d-grid gap-2">
-            <h2>$99 / mo</h2>
+            <h2 class="pricing-text">$99 / mo</h2>
             <p>Pirority Listing</p>
             <p>Unlimited Matches</p>
             <p>Unlimited Messages</p>
@@ -190,8 +190,8 @@
 
   <!-- Call to Action -->
 
-  <section id="cta">
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
+  <section id="cta" class="colored-section">
+    <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
     <button type="button" class="btn btn-dark btn-lg download-button">
       <i class="fa-brands fa-apple"></i> Download
     </button>
@@ -202,7 +202,7 @@
 
   <!-- Footer -->
 
-  <footer id="footer">
+  <footer id="footer" class="white-section">
     <i class="fa-brands fa-twitter icon-link"></i>
     <i class="fa-brands fa-facebook icon-link"></i>
     <i class="fa-brands fa-instagram icon-link"></i>
